Fix visible line when all headers are hidden

--- a/src/Gui/resources/scss/ui/_datatables.scss
+++ b/src/Gui/resources/scss/ui/_datatables.scss
@@ -103,6 +103,10 @@
                     thead {
                         display: block !important;
 
+                        &.hidden-responsive {
+                            display: none !important;
+                        }
+
                         th {
                             width: auto !important;
                             min-width: auto !important;
